<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/daystar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="50dp"
        />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:gravity="left"
        android:hint="@string/usernamehint"
        android:inputType="text"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/logo"/>


    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:textColor="@color/colorAccent"
        android:hint="@string/passwordhint"
        android:textColorHint="@color/colorAccent"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/txtUsername"/>



    <Button
        android:id="@+id/cmdLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@layout/button_rounded_background"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"/>



</android.support.constraint.ConstraintLayout>